--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -3,7 +3,9 @@
 	<div class="row">
 		<div class="col-md-2"></div>
 		<div class="col-md-8 m">
-			<h1>Contact</h1>
+			<h1>@{title}</h1>
+			<!-- CONTACTFORM COMPONENT -->
+			<!--- <ui-import path="/public/components/contactform.html"></ui-import> --->
 			<ui-component name="visible" path="response" config="if:!value || !value.success">
 				<div class="row">com
 					<div class="col-md-6 m">
